src/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <label>Resources</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Trainings Given</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <recordTypes>
        <fullName>Company_General</fullName>
        <active>true</active>
        <description>Company General Training</description>
        <label>Company General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Path</fullName>
        <active>true</active>
        <description>Project Path Training</description>
        <label>Project Path</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>